--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,4 @@
-html{
-    background-color: #333 !important;
-}
+html{  background-color: #333 !important; }
 body{
     background-color: #333 !important;
     color:white;
@@ -17,13 +15,19 @@ p {
     outline: none ;
 }
 */
+#background{
+  text-align:center;
+  position:absolute;
+  width:100%;
+  height:100%;
+  top:45px;
+}
 #backgroundImage{
-    width:100%;
-    height:95%;
+    width:auto;
+    height:100%;
     opacity:0.4;
     filter:alpha(opacity=40); /* For IE8 and earlier */
-    position:absolute;
-    top:45px;
+
     overflow:visible;
 }
 /* Game details
@@ -90,32 +94,20 @@ p {
     display:none;
     overflow:hidden;
 }
-th{
-        color:white !important;
-}
+th{  color:white !important; }
 
 /* SETTINGS*/
 #settingsTable{
     width:100%;
     background-color:inherit;
     border:0px;
-    
 }
-select[name=platform] {  
-    /*width:200px;*/
-}
-.inputSettings {
-    width:500px;
-}
-.selectSettings{
-    width:350px;
-}
-.labelSettings{
-   color:white;
-}
-table tr  {
-   background-color:inherit !important;
-}
+select[name=platform] {    /*width:200px;*/ }
+.inputSettings {  width:500px; }
+.selectSettings{  width:350px; }
+.labelSettings{  color:white; }
+table tr  {  background-color:inherit !important; }
+
 /* ls style */
 .searchBar{
     height:50px;
@@ -135,13 +127,8 @@ table tr  {
     overflow-y:auto;
     height:450px;
 }
-#listFiles p {
-    color:gray;
-}
-#listFiles p.selected {
-    color:white;
-    /* font-weight:bold;*/
-}
+#listFiles p {  color:gray; }
+#listFiles p.selected { color:white; }
 .files{
     vertical-align:top;	
     width:100%;
@@ -178,9 +165,7 @@ table tr  {
     top:500px;
     display:none;
 }
-#actions p {
-    margin-right:50px;
-}
+#actions p {  margin-right:50px; }
 
 .icon {
     background-size: 48px 48px;
@@ -193,11 +178,11 @@ table tr  {
 }
 
 /*Actions*/
-.img-play {	background-image:url('../images/run-icon.png');}
+.img-play { background-image:url('../images/run-icon.png');}
 .img-todo { background-image:url('../images/todo-icon.png');}
 .img-finish { background-image:url('../images/finish-icon.png');}
 /*Others*/
-.img-search {	background-image:url('../images/search.png');}
+.img-search { background-image:url('../images/search.png');}
 .img-favorite {	background-image:url('../images/heart.png');}
 
 .img-disabled {    
@@ -225,9 +210,7 @@ table tr  {
 .platform-scummvm {     background-image:url('../images/platforms/scummvm-icon.png');}
 
 /*OCAROUSEL CHANGES */
-.ocarousel_window_slides img {
-    width:475px; /*same as player width*/
-}
+.ocarousel_window_slides img { width:475px; }
 .carousel_data_div {
     width:50px;
     height:50px;
@@ -240,20 +223,12 @@ table tr  {
     position:absolute;
     background-color: rgba(255,255,255,0.5);
 }
-.carousel_data_right {
-    left:420px;
-}
-.carousel_data_div a {
-    color:black;
-}
+.carousel_data_right { left:420px; }
+.carousel_data_div a { color:black; }
 
 /*FOUNDATION FIXES*/
-.left {
-    height:0px;
-}
-.f-dropdown-random{
-    width:50px !important;
-}
+.left {  height:0px; }
+.f-dropdown-random{ width:50px !important; }
 
 .f-dropdown-random li{
     width: 50px;
